melee weapon items

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -174,8 +174,13 @@ shops:
     - 钩爪
     - 手里剑
     - 尖刺球
+    荒漠灾虫:
+    - 海王三叉戟
+    - 海胆链球
     世纪之花:
+    - 大狂鲨鳞
     - 大力士甲虫
+    - 绝对零度
   军火商:
     default:
     - 木箭
