--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -385,7 +385,7 @@
   size: 4.5
   projectileInfo:
     interval: 1
-    velocity: 1.75
+    velocity: 3
     name: 绝望光束
 风暴军刀:
   type: SWING
@@ -393,7 +393,7 @@
   size: 5
   projectileInfo:
     interval: 1
-    velocity: 1.25
+    velocity: 2.25
     name: 风暴剑气
 雪崩:
   type: SWING
@@ -409,7 +409,7 @@
   size: 9
   projectileInfo:
     interval: 1
-    velocity: 1.5
+    velocity: 4.68
     name: 夜之星光
 炎霜之刃:
   type: SWING
@@ -417,7 +417,7 @@
   size: 5
   projectileInfo:
     interval: 1
-    velocity: 1.5
+    velocity: 2.06
     name: 霜火球
 灾难巨剑:
   type: SWING
@@ -425,7 +425,7 @@
   size: 4.5
   projectileInfo:
     interval: 1
-    velocity: 1.6
+    velocity: 2.06
     name: 灾难巨剑剑气
 硫火之刃:
   type: SWING
@@ -437,7 +437,7 @@
   size: 0.1
   projectileInfo:
     interval: 1
-    velocity: 2
+    velocity: 3.75
     name: 硫火之刃
 雄伟之护:
   type: SWING
@@ -461,7 +461,7 @@
   size: 6
   projectileInfo:
     interval: 1
-    velocity: 1.5
+    velocity: 1.875
     name: 硫火刃
 凋亡屠刀:
   type: SWING
@@ -469,7 +469,7 @@
   size: 8.5
   projectileInfo:
     interval: 1
-    velocity: 1.25
+    velocity: 2.25
     name: 炽炎幻影刃
 混乱之刃:
   type: SWING
@@ -521,7 +521,7 @@
   size: 5
   projectileInfo:
     interval: 1
-    velocity: 1.75
+    velocity: 2.625
     name: 庇护之火
 狱火重剑:
   type: SWING
@@ -537,7 +537,7 @@
   size: 4.5
   projectileInfo:
     interval: 1
-    velocity: 1
+    velocity: 1.5
     name: 灵魂镰刀
 崇高誓约之剑:
   type: SWING
@@ -549,7 +549,7 @@
   size: 5
   projectileInfo:
     interval: 1
-    velocity: 2.5
+    velocity: 3.5
     name: 瘟疫云
 海爵剑:
   type: SWING
@@ -577,7 +577,7 @@
   size: 8
   projectileInfo:
     interval: 1
-    velocity: 1.75
+    velocity: 2.25
     name: 燃烧头骨
 钴薙刀:
   type: STAB
@@ -650,21 +650,6 @@
   type: STAB
   autoSwing: true
   size: 12.5
-绽花毒藤:
-  type: FLAIL
-  reach: 12
-  velocity: 1.5
-  autoSwing: true
-  attributes:
-    damage: 60
-    useTime: 22
-绽花毒藤_RIGHT_CLICK:
-  type: STAB
-  size: 3.5
-  autoSwing: true
-  attributes:
-    damage: 44
-    useTime: 30
 赤潮矛:
   type: STAB
   size: 3.5
@@ -683,6 +668,21 @@
   projectileInfo:
     velocity: 1.25
     name: 信风羽
+绽花毒藤:
+  type: FLAIL
+  reach: 12
+  velocity: 1.5
+  autoSwing: true
+  attributes:
+    damage: 60
+    useTime: 22
+绽花毒藤_RIGHT_CLICK:
+  type: STAB
+  size: 3.5
+  autoSwing: true
+  attributes:
+    damage: 44
+    useTime: 30
 星夜长枪:
   type: STAB
   autoSwing: true
@@ -1577,27 +1577,69 @@ P90:
   autoSwing: true
 烟陨彗星:
   type: YOYO
-  reach: 13
+  reach: 15
   velocity: 1.25
   duration: 100
   autoSwing: true
 涡旋:
   type: YOYO
-  reach: 15
-  velocity: 1.25
+  reach: 18
+  velocity: 1.35
   duration: 100
   autoSwing: true
 空旋:
   type: YOYO
-  reach: 19
-  velocity: 1.3
+  reach: 20
+  velocity: 1.25
   duration: 120
   autoSwing: true
 神旨:
   type: YOYO
-  reach: 21
-  velocity: 1.35
+  reach: 25
+  velocity: 1.5
   duration: 120
+  autoSwing: true
+阴阳:
+  type: YOYO
+  reach: 25
+  velocity: 1.5
+  duration: 150
+  autoSwing: true
+烁光:
+  type: YOYO
+  reach: 28
+  velocity: 1.6
+  duration: 150
+  autoSwing: true
+遗殇:
+  type: YOYO
+  reach: 32
+  velocity: 1.6
+  duration: 180
+  autoSwing: true
+泥潭:
+  type: YOYO
+  reach: 30
+  velocity: 1.6
+  duration: 180
+  autoSwing: true
+断层:
+  type: YOYO
+  reach: 30
+  velocity: 1.75
+  duration: 200
+  autoSwing: true
+瘟疫狂潮:
+  type: YOYO
+  reach: 30
+  velocity: 1.75
+  duration: 225
+  autoSwing: true
+微波辐照:
+  type: YOYO
+  reach: 32
+  velocity: 1.85
+  duration: 250
   autoSwing: true
 链锤:
   type: FLAIL
