--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -177,10 +177,16 @@ shops:
     荒漠灾虫:
     - 海王三叉戟
     - 海胆链球
+    - 贝壳刃弓
+    - 珊瑚手炮
+    极地之灵:
+    - 霜牙冲击波
     世纪之花:
+    - 纳米机器人
     - 大狂鲨鳞
     - 大力士甲虫
     - 绝对零度
+    - 恒吹雪
   军火商:
     default:
     - 木箭
@@ -193,6 +199,7 @@ shops:
     血肉之墙:
     - 弹壳
     - 狱炎箭
+    - P90
     世纪之花:
     - 爆炸杰克南瓜灯
     - 玉米糖
@@ -216,6 +223,8 @@ shops:
     - 雷管
     血肉之墙:
     - 火药
+    机械一王:
+    - 深核GK2
   建材商人:
     default:
     - 牌子
