--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -392,12 +392,14 @@
       - 召唤师徽章
     2:
       giveAllItems: false
+      amountToGive: 2
       items:
       - 毁灭刃
       - 发条突击步枪
       - 激光步枪
       - 鞭炮
       - 黑鹰遥控器
+      - 彩虹喵喷射器
     3:
       items:
       - 恶魔之心
@@ -433,6 +435,7 @@
       - 强效治疗药水:5:15
       - 视域之魂:25:40
       - 机械车轮片
+      - 劲弩:1:1:0.1
     2:
       progressRequired: 机械三王
       items:
@@ -494,6 +497,7 @@
       - 灾劫虚空
       - 混乱石:1:1:0.33
       - 再生护符:1:1:0.1
+      - 混乱之息:1:1:0.1
       - 灾厄尘:30:35
       - 混乱精华:10:15
   世纪之花:
@@ -512,6 +516,7 @@
       - 吉他斧:1:1:0.05
       - 矮人法杖:1:1:0.5
       - 刺钩:1:1:0.1
+      - 叶流:1:1:0.1
   阿娜希塔和利维坦:
     1:
       giveAllItems: false
@@ -554,6 +559,7 @@
   瘟疫使者歌莉娅:
     1:
       giveAllItems: false
+      amountToGive: 2
       items:
       - 疫病污染者
       - 瘟疫狂潮
