--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -2149,22 +2149,25 @@ TNT:
         - "霜火|50|1"
 硫火射线:
     penetration: 2
+    trailColor: 255|129|183
+    trailSize: 0.25
+    trailStepSize: 0.5
     buffInflict:
         - "硫磺火|40|1"
 化石碎片:
+    noGravityTicks: 0
     liveTime: 20
     buffInflict:
         - "碎甲|20|1"
 破城巨箭:
     arrowOrPotion: true
-    penetration: 2
     buffInflict:
         - "碎甲|60|1"
     clusterBomb:
         amount: 3
         damageMulti: 0.25
         name: 化石碎片
-        velocity: 0.75
+        velocity: 0.25
 瘟疫箭:
     arrowOrPotion: true
     buffInflict:
